TAP5-116: Set up a large heap size and PermGen space for tests across all projects
git-svn-id: https://svn.apache.org/repos/asf/tapestry/tapestry5/trunk@1081000 13f79535-47bb-0310-9956-ffa450edef68